arm: laguna: Add clocks with clear name

--- a/arch/arm/dts/laguna-clocks.dtsi
+++ b/arch/arm/dts/laguna-clocks.dtsi
@@ -6,21 +6,21 @@
  */
 
 / {
-	fake_32khz: fake_32khz {
+	fake_32k: fake_32k {
 		compatible = "fixed-clock";
 		#clock-cells = <0>;
 		clock-frequency = <32000>;
 		clock-output-names = "fake_32k";
 	};
 
-	main_xtal_24mhz: main_clk_24mhz {
+	main_xtal_24m: main_clk_24m {
 		compatible = "fixed-clock";
 		#clock-cells = <0>;
 		clock-frequency = <24000000>;
 		clock-output-names = "main_xtal_24m";
 	};
 
-	safety_xtal_24mhz: safety_clk_24mhz {
+	safety_xtal_24m: safety_clk_24m {
 		compatible = "fixed-clock";
 		#clock-cells = <0>;
 		clock-frequency = <24000000>;
@@ -33,9 +33,9 @@
 		#address-cells = <1>;
 		#size-cells = <1>;
 
-		ddr_pll: ddr_pll {
+		ddr_pll_4260m: ddr_pll_4260m {
 			compatible = "pll-clk";
-			clocks = <&main_xtal_24mhz>;
+			clocks = <&main_xtal_24m>;
 			#clock-cells = <0>;
 			clock-output-names = "ddr_pll_4260m";
 		};
@@ -47,9 +47,9 @@
 		#address-cells = <1>;
 		#size-cells = <1>;
 
-		fab_pll: fab_pll {
+		fab_pll_2400m: fab_pll_2400m {
 			compatible = "pll-clk";
-			clocks = <&main_xtal_24mhz>;
+			clocks = <&main_xtal_24m>;
 			clock-names = "main_xtal_24m";
 			#clock-cells = <0>;
 			clock-output-names = "fab_pll_2400m";
@@ -67,171 +67,189 @@
 		#address-cells = <1>;
 		#size-cells = <1>;
 
-		fab_pll_div2_lv0: fab_pll_div2_lv0 {
+		fab_pll_1200m: fab_pll_1200m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&fab_pll>;
+			clocks = <&fab_pll_2400m>;
+			clock-names = "fab_pll_2400m";
 			clock-mult = <1>;
 			clock-div = <2>;
 			clock-output-names = "fab_pll_1200m";
 		};
 
-		fab_pll_div3_lv0: fab_pll_div3_lv0 {
+		fab_pll_800m: fab_pll_800m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&fab_pll>;
+			clocks = <&fab_pll_2400m>;
+			clock-names = "fab_pll_2400m";
 			clock-mult = <1>;
 			clock-div = <3>;
 			clock-output-names = "fab_pll_800m";
 		};
 
-		fab_pll_div5_lv0: fab_pll_div5_lv0 {
+		fab_pll_600m: fab_pll_600m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&fab_pll>;
-			clock-mult = <1>;
-			clock-div = <5>;
-			clock-output-names = "fab_pll_480m";
-		};
-
-		fab_pll_div2_lv1: fab_pll_div2_lv1 {
-			compatible = "fixed-factor-clock";
-			#clock-cells = <0>;
-			clocks = <&fab_pll_div2_lv0>;
+			clocks = <&fab_pll_1200m>;
+			clock-names = "fab_pll_1200m";
 			clock-mult = <1>;
 			clock-div = <2>;
 			clock-output-names = "fab_pll_600m";
 		};
 
-		fab_pll_div2_lv1_0: fab_pll_div2_lv1_0 {
+		fab_pll_480m: fab_pll_480m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&fab_pll_div3_lv0>;
+			clocks = <&fab_pll_2400m>;
+			clock-names = "fab_pll_2400m";
+			clock-mult = <1>;
+			clock-div = <5>;
+			clock-output-names = "fab_pll_480m";
+		};
+
+		fab_pll_400m: fab_pll_400m {
+			compatible = "fixed-factor-clock";
+			#clock-cells = <0>;
+			clocks = <&fab_pll_800m>;
+			clock-names = "fab_pll_800m";
 			clock-mult = <1>;
 			clock-div = <2>;
 			clock-output-names = "fab_pll_400m";
 		};
 
-		fab_pll_div6_lv1: fab_pll_div6_lv1 {
+		fab_pll_300m: fab_pll_300m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&fab_pll_div5_lv0>;
-			clock-mult = <1>;
-			clock-div = <6>;
-			clock-output-names = "fab_pll_80m";
-		};
-
-		fab_pll_div2_lv2: fab_pll_div2_lv2 {
-			compatible = "fixed-factor-clock";
-			#clock-cells = <0>;
-			clocks = <&fab_pll_div2_lv1>;
+			clocks = <&fab_pll_600m>;
+			clock-names = "fab_pll_600m";
 			clock-mult = <1>;
 			clock-div = <2>;
 			clock-output-names = "fab_pll_300m";
 		};
 
-		fab_pll_div2_lv2_0: fab_pll_div2_lv2_0 {
+		fab_pll_200m: fab_pll_200m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&fab_pll_div3_lv0>;
+			clocks = <&fab_pll_400m>;
+			clock-names = "fab_pll_400m";
 			clock-mult = <1>;
 			clock-div = <2>;
 			clock-output-names = "fab_pll_200m";
 		};
 
-		fab_pll_div2_lv2_1: fab_pll_div2_lv2_1 {
+		fab_pll_150m: fab_pll_150m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&fab_pll_div6_lv1>;
-			clock-mult = <1>;
-			clock-div = <2>;
-			clock-output-names = "fab_pll_40m";
-		};
-
-		fab_pll_div5_lv2: fab_pll_div5_lv2 {
-			compatible = "fixed-factor-clock";
-			#clock-cells = <0>;
-			clocks = <&fab_pll_div2_lv1>;
-			clock-mult = <1>;
-			clock-div = <5>;
-			clock-output-names = "fab_pll_120m";
-		};
-
-		fab_pll_div2_lv3: fab_pll_div2_lv3 {
-			compatible = "fixed-factor-clock";
-			#clock-cells = <0>;
-			clocks = <&fab_pll_div5_lv2>;
-			clock-mult = <1>;
-			clock-div = <2>;
-			clock-output-names = "fab_pll_60m";
-		};
-
-		fab_pll_div2_lv3_0: fab_pll_div2_lv3_0 {
-			compatible = "fixed-factor-clock";
-			#clock-cells = <0>;
-			clocks = <&fab_pll_div2_lv2_0>;
-			clock-mult = <1>;
-			clock-div = <2>;
-			clock-output-names = "fab_pll_100m";
-		};
-
-		fab_pll_div2_lv3_1: fab_pll_div2_lv3_1 {
-			compatible = "fixed-factor-clock";
-			#clock-cells = <0>;
-			clocks = <&fab_pll_div2_lv2_1>;
-			clock-mult = <1>;
-			clock-div = <2>;
-			clock-output-names = "fab_pll_20m";
-		};
-
-		fab_pll_div2_lv3_2: fab_pll_div2_lv3_2 {
-			compatible = "fixed-factor-clock";
-			#clock-cells = <0>;
-			clocks = <&fab_pll_div2_lv2>;
+			clocks = <&fab_pll_300m>;
+			clock-names = "fab_pll_300m";
 			clock-mult = <1>;
 			clock-div = <2>;
 			clock-output-names = "fab_pll_150m";
 		};
 
-		fab_pll_div5_lv3: fab_pll_div5_lv3 {
+		fab_pll_120m: fab_pll_120m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&fab_pll_div5_lv2>;
+			clocks = <&fab_pll_600m>;
+			clock-names = "fab_pll_600m";
 			clock-mult = <1>;
 			clock-div = <5>;
-			clock-output-names = "fab_pll_24m";
+			clock-output-names = "fab_pll_120m";
 		};
 
-		fab_pll_div2_lv4: fab_pll_div2_lv4 {
+		fab_pll_100m: fab_pll_100m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&fab_pll_div5_lv3>;
+			clocks = <&fab_pll_200m>;
+			clock-names = "fab_pll_200m";
 			clock-mult = <1>;
 			clock-div = <2>;
-			clock-output-names = "fab_pll_12m";
+			clock-output-names = "fab_pll_100m";
 		};
 
-		fab_pll_div2_lv4_0: fab_pll_div2_lv4_0 {
+		fab_pll_80m: fab_pll_80m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&fab_pll_div2_lv3>;
+			clocks = <&fab_pll_480m>;
+			clock-names = "fab_pll_480m";
+			clock-mult = <1>;
+			clock-div = <6>;
+			clock-output-names = "fab_pll_80m";
+		};
+
+		fab_pll_60m: fab_pll_60m {
+			compatible = "fixed-factor-clock";
+			#clock-cells = <0>;
+			clocks = <&fab_pll_120m>;
+			clock-names = "fab_pll_120m";
+			clock-mult = <1>;
+			clock-div = <2>;
+			clock-output-names = "fab_pll_60m";
+		};
+
+		fab_pll_40m: fab_pll_40m {
+			compatible = "fixed-factor-clock";
+			#clock-cells = <0>;
+			clocks = <&fab_pll_80m>;
+			clock-names = "fab_pll_80m";
+			clock-mult = <1>;
+			clock-div = <2>;
+			clock-output-names = "fab_pll_40m";
+		};
+
+		fab_pll_30m: fab_pll_30m {
+			compatible = "fixed-factor-clock";
+			#clock-cells = <0>;
+			clocks = <&fab_pll_60m>;
+			clock-names = "fab_pll_60m";
 			clock-mult = <1>;
 			clock-div = <2>;
 			clock-output-names = "fab_pll_30m";
 		};
 
-		fab_pll_div3_lv4: fab_pll_div3_lv4 {
+		fab_pll_24m: fab_pll_24m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&fab_pll_div5_lv3>;
+			clocks = <&fab_pll_60m>;
+			clock-names = "fab_pll_60m";
+			clock-mult = <1>;
+			clock-div = <5>;
+			clock-output-names = "fab_pll_24m";
+		};
+
+		fab_pll_20m: fab_pll_20m {
+			compatible = "fixed-factor-clock";
+			#clock-cells = <0>;
+			clocks = <&fab_pll_40m>;
+			clock-names = "fab_pll_40m";
+			clock-mult = <1>;
+			clock-div = <2>;
+			clock-output-names = "fab_pll_20m";
+		};
+
+		fab_pll_12m: fab_pll_12m {
+			compatible = "fixed-factor-clock";
+			#clock-cells = <0>;
+			clocks = <&fab_pll_24m>;
+			clock-names = "fab_pll_24m";
+			clock-mult = <1>;
+			clock-div = <2>;
+			clock-output-names = "fab_pll_12m";
+		};
+
+		fab_pll_8m: fab_pll_8m {
+			compatible = "fixed-factor-clock";
+			#clock-cells = <0>;
+			clocks = <&fab_pll_24m>;
+			clock-names = "fab_pll_24m";
 			clock-mult = <1>;
 			clock-div = <3>;
 			clock-output-names = "fab_pll_8m";
 		};
 
-		cpu_pll: cpu_pll {
+		cpu_pll_1296m: cpu_pll_1296m {
 			compatible = "pll-clk";
-			clocks = <&fab_pll_div5_lv3>;
+			clocks = <&fab_pll_24m>;
 			clock-names = "fab_pll_24m";
 			#clock-cells = <0>;
 			clock-output-names = "cpu_pll_1296m";
@@ -243,9 +261,9 @@
 			pll-reopen = <&main_pllc 0x15C 1>;
 		};
 
-		npu_pll: npu_pll {
+		npu_pll_996m: npu_pll_996m {
 			compatible = "pll-clk";
-			clocks = <&fab_pll_div5_lv3>;
+			clocks = <&fab_pll_24m>;
 			clock-names = "fab_pll_24m";
 			#clock-cells = <0>;
 			clock-output-names = "npu_pll_996m";
@@ -257,9 +275,9 @@
 			pll-reopen = <&main_pllc 0x15C 2>;
 		};
 
-		apll: apll {
+		apll_996m: apll_996m {
 			compatible = "pll-clk";
-			clocks = <&fab_pll_div5_lv3>;
+			clocks = <&fab_pll_24m>;
 			clock-names = "fab_pll_24m";
 			#clock-cells = <0>;
 			clock-output-names = "apll_996m";
@@ -271,9 +289,9 @@
 			pll-reopen = <&main_pllc 0x15C 3>;
 		};
 
-		epll: epll {
+		epll_1500m: epll_1500m {
 			compatible = "pll-clk";
-			clocks = <&fab_pll_div5_lv3>;
+			clocks = <&fab_pll_24m>;
 			clock-names = "fab_pll_24m";
 			#clock-cells = <0>;
 			clock-output-names = "epll_1500m";
@@ -285,172 +303,191 @@
 			pll-reopen = <&main_pllc 0x15C 4>;
 		};
 
-		cpu_pll_div11_lv3: cpu_pll_div11_lv3 {
+		cpu_pll_81m: cpu_pll_81m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&cpu_pll>;
-			clock-mult = <1>;
-			clock-div = <44>;
-			clock-output-names = "cpu_pll_29p45m";
-		};
-
-		cpu_pll_div2_lv4: cpu_pll_div2_lv4 {
-			compatible = "fixed-factor-clock";
-			#clock-cells = <0>;
-			clocks = <&cpu_pll>;
+			clocks = <&cpu_pll_1296m>;
+			clock-names = "cpu_pll_1296m";
 			clock-mult = <1>;
 			clock-div = <16>;
 			clock-output-names = "cpu_pll_81m";
 		};
 
-		npu_pll_div10_lv4: npu_pll_div10_lv4 {
+		cpu_pll_29p45m: cpu_pll_29p45m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&npu_pll>;
+			clocks = <&cpu_pll_1296m>;
+			clock-names = "cpu_pll_1296m";
+			clock-mult = <1>;
+			clock-div = <44>;
+			clock-output-names = "cpu_pll_29p45m";
+		};
+
+		npu_pll_24p9m: npu_pll_24p9m {
+			compatible = "fixed-factor-clock";
+			#clock-cells = <0>;
+			clocks = <&npu_pll_996m>;
+			clock-names = "npu_pll_996m";
 			clock-mult = <1>;
 			clock-div = <80>;
 			clock-output-names = "cpu_pll_24p9m";
 		};
 
-		epll_div3_lv0: epll_div3_lv0 {
+		epll_500m: epll_500m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&epll>;
+			clocks = <&epll_1500m>;
+			clock-names = "epll_1500m";
 			clock-mult = <1>;
 			clock-div = <3>;
 			clock-output-names = "epll_500m";
 		};
 
-		epll_div2_lv1: epll_div2_lv1 {
+		epll_250m: epll_250m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&epll_div3_lv0>;
+			clocks = <&epll_500m>;
+			clock-names = "epll_500m";
 			clock-mult = <1>;
 			clock-div = <2>;
 			clock-output-names = "epll_250m";
 		};
 
-		epll_div2_lv1_0: epll_div2_lv1_0 {
+		epll_150m: epll_150m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&epll>;
+			clocks = <&epll_1500m>;
+			clock-names = "epll_1500m";
 			clock-mult = <1>;
 			clock-div = <10>;
 			clock-output-names = "epll_150m";
 		};
 
-		epll_div2_lv2: epll_div2_lv2 {
+		epll_125m: epll_125m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&epll_div2_lv1>;
+			clocks = <&epll_250m>;
+			clock-names = "epll_250m";
 			clock-mult = <1>;
 			clock-div = <2>;
 			clock-output-names = "epll_125m";
 		};
 
-		epll_div3_lv2: epll_div3_lv2 {
+		epll_50m: epll_50m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&epll_div2_lv1_0>;
+			clocks = <&epll_150m>;
+			clock-names = "epll_150m";
 			clock-mult = <1>;
 			clock-div = <3>;
 			clock-output-names = "epll_50m";
 		};
 
-		epll_div2_lv3: epll_div2_lv3 {
+		epll_25m: epll_25m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&epll_div3_lv2>;
+			clocks = <&epll_50m>;
+			clock-names = "epll_50m";
 			clock-mult = <1>;
 			clock-div = <2>;
 			clock-output-names = "epll_25m";
 		};
 
-		epll_div5_lv4: epll_div5_lv4 {
+		epll_5m: epll_5m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&epll_div2_lv3>;
+			clocks = <&epll_25m>;
+			clock-names = "epll_25m";
 			clock-mult = <1>;
 			clock-div = <2>;
 			clock-output-names = "epll_5m";
 		};
 
-		apll_div2_lv0: apll_div2_lv0 {
+		apll_498m: apll_498m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&apll>;
+			clocks = <&apll_996m>;
+			clock-names = "apll_996m";
 			clock-mult = <1>;
 			clock-div = <2>;
 			clock-output-names = "apll_498m";
 		};
 
-		apll_div11_lv1: apll_div11_lv1 {
+		apll_249m: apll_249m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&apll_div2_lv0>;
-			clock-mult = <1>;
-			clock-div = <11>;
-			clock-output-names = "apll_45p27m";
-		};
-
-		apll_div2_lv1: apll_div2_lv1 {
-			compatible = "fixed-factor-clock";
-			#clock-cells = <0>;
-			clocks = <&apll_div2_lv0>;
+			clocks = <&apll_498m>;
+			clock-names = "apll_498m";
 			clock-mult = <1>;
 			clock-div = <2>;
 			clock-output-names = "apll_249m";
 		};
 
-		apll_div5_lv1: apll_div5_lv1 {
+		apll_99p6m: apll_99p6m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&apll_div2_lv0>;
+			clocks = <&apll_498m>;
+			clock-names = "apll_498m";
 			clock-mult = <1>;
 			clock-div = <5>;
 			clock-output-names = "apll_99p6m";
 		};
 
-		apll_div5_lv2: apll_div5_lv2 {
+		apll_45p27m: apll_45p27m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&apll>;
+			clocks = <&apll_498m>;
+			clock-names = "apll_498m";
 			clock-mult = <1>;
-			clock-div = <75>;
-			clock-output-names = "apll_13p28m";
+			clock-div = <11>;
+			clock-output-names = "apll_45p27m";
 		};
 
-		apll_div5_lv2_0: apll_div5_lv2_0 {
+		apll_19p92m: apll_19p92m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&apll_div5_lv1>;
+			clocks = <&apll_99p6m>;
+			clock-names = "apll_99p6m";
 			clock-mult = <1>;
 			clock-div = <5>;
 			clock-output-names = "apll_19p92m";
 		};
 
-		apll_div10_lv2: apll_div10_lv2 {
+		apll_16p6m: apll_16p6m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&apll_div5_lv1>;
-			clock-mult = <1>;
-			clock-div = <10>;
-			clock-output-names = "apll_9p96m";
-		};
-
-		apll_div5_lv3: apll_div5_lv3 {
-			compatible = "fixed-factor-clock";
-			#clock-cells = <0>;
-			clocks = <&apll_div2_lv1>;
+			clocks = <&apll_249m>;
+			clock-names = "apll_249m";
 			clock-mult = <1>;
 			clock-div = <15>;
 			clock-output-names = "apll_16p6m";
 		};
 
+		apll_13p28m: apll_13p28m {
+			compatible = "fixed-factor-clock";
+			#clock-cells = <0>;
+			clocks = <&apll_996m>;
+			clock-names = "apll_996m";
+			clock-mult = <1>;
+			clock-div = <75>;
+			clock-output-names = "apll_13p28m";
+		};
+
+		apll_9p96m: apll_9p96m {
+			compatible = "fixed-factor-clock";
+			#clock-cells = <0>;
+			clocks = <&apll_99p6m>;
+			clock-names = "apll_99p6m";
+			clock-mult = <1>;
+			clock-div = <10>;
+			clock-output-names = "apll_9p96m";
+		};
+
 		clk_comm_24m: clk_comm_24m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&fab_pll_div5_lv3>;
+			clocks = <&fab_pll_24m>;
+			clock-names = "fab_pll_24m";
 			clock-mult = <1>;
 			clock-div = <1>;
 			clock-output-names = "clk_comm_24m";
@@ -459,7 +496,7 @@
 		clk_flash_24m: clk_flash_24m {
 			compatible = "fixed-factor-clock";
 			#clock-cells = <0>;
-			clocks = <&fab_pll_div5_lv3>;
+			clocks = <&fab_pll_24m>;
 			clock-names = "fab_pll_24m";
 			clock-mult = <1>;
 			clock-div = <1>;
