--- a/configs/lua-zebu_defconfig
+++ b/configs/lua-zebu_defconfig
@@ -18,6 +18,8 @@ CONFIG_DEBUG_UART_CLOCK=10000000
 # CONFIG_PSCI_RESET is not set
 CONFIG_AXERA_LUA=y
 CONFIG_TARGET_LUA_ZEBU=y
+CONFIG_LUA_SAFETY_INIT=y
+CONFIG_LUA_R5F_DEMO_CV=y
 CONFIG_SYS_LOAD_ADDR=0x0
 CONFIG_DEBUG_UART=y
 CONFIG_CC_OPTIMIZE_FOR_SPEED=y
@@ -31,6 +33,7 @@ CONFIG_BOOTCOMMAND="run distro_bootcmd"
 CONFIG_CONSOLE_RECORD=y
 CONFIG_SYS_CONSOLE_IS_IN_ENV=y
 # CONFIG_DISPLAY_BOARDINFO is not set
+CONFIG_BOARD_LATE_INIT=y
 CONFIG_STACKPROTECTOR=y
 CONFIG_SPL_FRAMEWORK_BOARD_INIT_F=y
 CONFIG_SPL_MAX_SIZE=0x1FE000
