arm: laguna: Enable R5F demo within fpga defconfig

--- a/configs/lua-fpga_defconfig
+++ b/configs/lua-fpga_defconfig
@@ -30,6 +30,7 @@ CONFIG_LUA_DSU_PMU_INIT=y
 CONFIG_LUA_RAS_INIT=y
 CONFIG_LUA_NOR0=y
 CONFIG_LUA_MTDPARTS_NOR0="4m(uboot)"
+CONFIG_LUA_R5F_DEMO_CV=y
 CONFIG_LUA_SELECT_UART_FOR_CONSOLE=y
 CONFIG_SYS_LOAD_ADDR=0x102000000
 CONFIG_BUILD_TARGET="u-boot.itb"
@@ -50,6 +51,7 @@ CONFIG_BOOTCOMMAND="run distro_bootcmd"
 CONFIG_CONSOLE_RECORD=y
 CONFIG_SYS_CONSOLE_IS_IN_ENV=y
 CONFIG_BOARD_TYPES=y
+CONFIG_BOARD_LATE_INIT=y
 CONFIG_LAST_STAGE_INIT=y
 CONFIG_AVB_VERIFY=y
 CONFIG_AVB_BUF_ADDR=0x90000000
